[project]
name = "ai-blogger"
version = "0.1.0"
description = "AI-powered pipeline to generate citation-rich, blog-ready content"
authors = [
    { name = "georgejieh", email = "99384826+georgejieh@users.noreply.github.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "openai >=1.84.0,<2.0.0",
    "gradio >=5.33.0,<6.0.0",
    "requests >=2.32.3,<3.0.0",
    "python-dotenv >=1.1.0,<2.0.0",
    "markdownify >=1.1.0,<2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 100
exclude = ["__pycache__", "outputs", "venv", ".venv"]

[tool.poetry]
packages = [
  { include = "app" },
  { include = "modules" },
  { include = "utils" }
]
